# django-pyrepl

./: LICENCE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/django_pyrepl/management/commands/: shell.py
